{
  "version": 4,
  "terraform_version": "1.12.0",
  "serial": 39,
  "lineage": "8738c2bd-8f65-de0e-f285-c1b9a9e1349b",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/b7feb419-8306-4247-b6ef-6d19fe33b7e4/resourceGroups/foodadvisor-rg/providers/Microsoft.Network/networkInterfaces/foodadvisor-nic",
            "internal_domain_name_suffix": "csk51gzmp1kuph2dg3eoqejbuh.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/b7feb419-8306-4247-b6ef-6d19fe33b7e4/resourceGroups/foodadvisor-rg/providers/Microsoft.Network/publicIPAddresses/foodadvisor-pip",
                "subnet_id": "/subscriptions/b7feb419-8306-4247-b6ef-6d19fe33b7e4/resourceGroups/foodadvisor-rg/providers/Microsoft.Network/virtualNetworks/foodadvisor-vnet/subnets/default"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "mac_address": "60-45-BD-DB-31-76",
            "name": "foodadvisor-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "foodadvisor-rg",
            "virtual_machine_id": "/subscriptions/b7feb419-8306-4247-b6ef-6d19fe33b7e4/resourceGroups/foodadvisor-rg/providers/Microsoft.Compute/virtualMachines/foodadvisor-vm"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_public_ip.pip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b7feb419-8306-4247-b6ef-6d19fe33b7e4/resourceGroups/foodadvisor-rg/providers/Microsoft.Network/networkSecurityGroups/foodadvisor-nsg",
            "location": "eastus",
            "name": "foodadvisor-nsg",
            "resource_group_name": "foodadvisor-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-ssh",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/b7feb419-8306-4247-b6ef-6d19fe33b7e4/resourceGroups/foodadvisor-rg/providers/Microsoft.Network/networkSecurityGroups/foodadvisor-nsg/securityRules/allow-ssh",
            "name": "allow-ssh",
            "network_security_group_name": "foodadvisor-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "foodadvisor-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/b7feb419-8306-4247-b6ef-6d19fe33b7e4/resourceGroups/foodadvisor-rg/providers/Microsoft.Network/publicIPAddresses/foodadvisor-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "172.190.138.238",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "foodadvisor-pip",
            "resource_group_name": "foodadvisor-rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/b7feb419-8306-4247-b6ef-6d19fe33b7e4/resourceGroups/foodadvisor-rg/providers/Microsoft.Network/virtualNetworks/foodadvisor-vnet/subnets/default",
            "name": "default",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "foodadvisor-rg",
            "virtual_network_name": "foodadvisor-vnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b7feb419-8306-4247-b6ef-6d19fe33b7e4/resourceGroups/foodadvisor-rg/providers/Microsoft.Network/virtualNetworks/foodadvisor-vnet/subnets/default",
            "network_security_group_id": "/subscriptions/b7feb419-8306-4247-b6ef-6d19fe33b7e4/resourceGroups/foodadvisor-rg/providers/Microsoft.Network/networkSecurityGroups/foodadvisor-nsg",
            "subnet_id": "/subscriptions/b7feb419-8306-4247-b6ef-6d19fe33b7e4/resourceGroups/foodadvisor-rg/providers/Microsoft.Network/virtualNetworks/foodadvisor-vnet/subnets/default"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "9bfd9514-7e2c-47d5-9f83-3748e81121a7",
            "id": "/subscriptions/b7feb419-8306-4247-b6ef-6d19fe33b7e4/resourceGroups/foodadvisor-rg/providers/Microsoft.Network/virtualNetworks/foodadvisor-vnet",
            "location": "eastus",
            "name": "foodadvisor-vnet",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "foodadvisor-rg",
            "subnet": [
              {
                "address_prefixes": [
                  "10.0.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/b7feb419-8306-4247-b6ef-6d19fe33b7e4/resourceGroups/foodadvisor-rg/providers/Microsoft.Network/virtualNetworks/foodadvisor-vnet/subnets/default",
                "name": "default",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              }
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}